[package]
name = "rues"
version = "0.1.4"
edition = "2021"
description = "RuES is JMES Evaluation as Service"
license = "MIT"
repository = "https://github.com/maxpert/rues"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.3"
actix-http = "^2"
actix-service = "^1"
actix-server = "^1"
serde = "^1.0.132"
serde_json = "^1.0.73"
jmespatch = {version = "^0.3.0", features = ["sync"]}
env_logger = "^0.9.0"
log = "^0.4.14"
config = {version = "0.11", features = ["yaml", "hjson"]}
lazy_static = "^1.4.0"
notify = "^4.0.0"
cached = "0.26.2"

[[bin]]
name = "rues"